--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "style": "npx tailwindcss -i ./src/i.css -o ./src/o.css -w -p -m",
     "format": "npx prettier . -w",
-    "build": "vue-tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
